<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:paddingBottom="8dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textDataHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/data_time"
            style="@style/dateText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            style="@style/TitleTextInHome"
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/kak"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDataHome" />

        <FrameLayout
            android:id="@+id/pagerLayout"
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/red" />

            <me.relex.circleindicator.CircleIndicator3
                android:id="@+id/dotsIndicator"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                style="@style/dotsIndicator"
                android:background="@drawable/bcg_for_indicator"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="16dp"
                />

        </FrameLayout>

        <TextView
            android:id="@+id/description"
            style="@style/mainTextInHome"
            android:layout_width="358dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/under_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pagerLayout" />

        <TextView
            android:id="@+id/nextText"
            style="@style/nextText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:text="@string/next_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description" />


        <TextView
            android:id="@+id/textLike"
            style="@style/textMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:padding="5dp"
            android:layout_marginTop="22dp"
            android:drawableStart="@drawable/heart"
            android:drawablePadding="7dp"
            android:text="104"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nextText" />

        <TextView
            android:id="@+id/textComent"
            style="@style/textMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:drawableStart="@drawable/comment"
            android:drawablePadding="7dp"
            android:layout_marginStart="20dp"
            android:text="76"
            app:layout_constraintStart_toEndOf="@+id/textLike"
            app:layout_constraintTop_toBottomOf="@+id/nextText"
            android:paddingBottom="15dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>